# Canalotus

./: CMakeLists.txt  Canalotus_80m.rar  README.md  bochsrc.bxrc  version_zh_cn.md
Canalotus/img/: a.img
src/: Makefile
src/boot/: FAT12head.inc  boot.asm  kernel.asm  loader.asm
src/boot/include/: lib.inc  load.inc  macro.inc
src/fs/: main.c
src/include/: assert.h  config.h  console.h  const.h  fs.h  global.h  hd.h  keyboard.h  keymap.h  proc.h  protect.h  proto.h  stdio.h  string.h  tty.h  type.h
src/include/sys/: color.h  config.h  console.h  const.h  fs.h  global.h  hd.h  keymap.h  proc.h  protect.h  proto.h  sconst.inc  tty.h  type.h
src/kernel/: clock.c  console.c  global.c  hd.c  i8259.c  kernel.asm  keyboard.c  main.c  printf.c  proc.c  protect.c  start.c  string.asm  sys.c  syscall.asm  tty.c  vsprintf.c
src/kernel/include/: color.h  console.h  const.h  global.h  keyboard.h  keymap.h  proc.h  protect.h  proto.h  sconst.inc  string.h  tty.h  type.h
src/lib/: klib.c  kliba.asm  misc.c  printf.c  string.asm  vsprintf.c
